# mcp-sideport

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mcp_sideport/: __init__.py  __main__.py  daemon.py  hybrid_api.py
tests/: __init__.py  conftest.py  test_daemon.py  test_hardening.py  test_security.py  test_session_isolation.py
tmp/handoff/: handoff-2026-02-02-agentic-task-fix-asyncio-add-tests.md
