[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sideport"
version = "0.1.0"
description = "MCP Apps bridge for AI coding tools - browser UIs with REST fallback"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Clockwork Innovations" }]
keywords = ["mcp", "ai-tools", "browser-ui", "dashboard", "sidecar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["aiohttp>=3.9.0"]

[project.scripts]
mcp-sideport = "mcp_sideport.daemon:main"

[project.urls]
Repository = "https://github.com/clockwork-innovations/mcp-sideport"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sideport"]
