[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sideport"
version = "0.0.2"
description = "MCP Apps bridge for AI coding tools - browser UIs with REST fallback"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Clockwork Innovations" }]
keywords = ["mcp", "ai-tools", "browser-ui", "dashboard", "sidecar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["aiohttp>=3.9.0"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-aiohttp>=1.1.0",
    "ruff>=0.14.0",
]

[project.scripts]
mcp-sideport = "mcp_sideport.daemon:main"

[project.urls]
Repository = "https://github.com/Clockwork-Innovations/mcp-sideport"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sideport"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
